Solving the overlfow bug on Firefox (due to input default sizing behavior + styling to match mock

--- a/client.css
+++ b/client.css
@@ -1,3 +1,6 @@
+body {
+  background-color: rgb(99, 142, 191);
+}
 
 #welcomeContainer {
   margin: auto;
@@ -6,27 +9,41 @@
   column-gap: 10px;
   display: grid;
   grid-template-columns: 340px 250px;
-  border: 1px solid gray;
 }
+
 
 #forms {
   display: grid;
   row-gap: 10px;
-  grid-template-rows: 100px 400px;
+  grid-template-rows: 95px 295px;
   height: 100%;
+  width: 100%;
   overflow: auto;
 }
 
-#forms > div {
-    border: 1px solid gray;
+#forms > div, #welcomeLogo {
+    border: 2px solid black;
+    background-color: white;
 }
 
 .formLabelInput {
   display: grid;
-  grid-template-columns: 40% auto;
+  grid-template-columns: 40% 60%;
   grid-template-rows: auto;
 }
 
+.formLabelInput input {
+  min-width: 0;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+#signupLabel {
+  text-align: center;
+  font-weight: bold;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
 .submitButton {
   float: right;
 }
